# Project

./: .gitignore  README.md  main.py
mod_authorization/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  go.mod  go.sum  main.go  mongo_handler.go
mod_authorization/authorization_handler/: main.go
mod_authorization/builder/: Builder.go  index.html
mod_authorization/classes/: classes.go
mod_authorization/code_authentication/: Code_Authentication.go
mod_authorization/handlers/: handlers.go
mod_authorization/jwt_handler/: jwt.go
mod_authorization/mongo-handler/: mongo_handler.go
mod_authorization/mongo-init/: init.js
mod_main-testapp/: CMakeLists.txt  README.md  main.cpp
mod_main-testapp/src/: Client.cpp  Client.h  Func.h  PostgreSQL.cpp  PostgreSQL.h  Token.cpp  Token.h  checkToken.h  getAddress.cpp  getAddress.h  handlerRequest.cpp  handlerRequest.h  main.cpp
mod_telegram/: README.md  docker-compose.yaml  main.py
mod_telegram/commands/: __init__.py  bot_commands.py  help.py  start.py  unknown.py
mod_telegram/db/: __init__.py  engine.py  user.py
mod_telegram/handlers/: commands.py  keyboards.py
mod_telegram/middlewares/: register_check.py
mod_telegram/mocks/: main_module_mock.py
mod_telegram/test_tg_bot/: main.py
mod_telegram/test_tg_bot/handlers/: commands.py  keyboards.py
mod_telegram/test_tg_bot/mocks/: auth.py  main_module.py
mod_telegram/test_tg_bot/services/: redis_service.py
mod_web-client/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pom.xml
(+42 files in other folders)
